--- a/src/assets/styles/sass/index.scss
+++ b/src/assets/styles/sass/index.scss
@@ -6,6 +6,9 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
   font: inherit;
   vertical-align: baseline; }
 
+body {
+  font-family: 'Lato', sans-serif;  
+}
 * { box-sizing: border-box }
 
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
