--- a/src/app/components/access/signup/signup.html
+++ b/src/app/components/access/signup/signup.html
@@ -1,1 +1,5 @@
-<div>Signup</div>
+<div>
+	<a ui-sref="dashboard">Sign Up</a>
+	Already have an account? <a ui-sref="access.signin">Sign In</a>
+	<a ui-sref="access.forgot-password">Forgot Password?</a> 
+</div>
