Adding boilerplate routes

--- a/src/app/components/access/signin/signin.html
+++ b/src/app/components/access/signin/signin.html
@@ -1,4 +1,4 @@
 <div>
-	<a ui-sref="dashboard">Sign In</a>
+	<a ui-sref="main.dashboard">Sign In</a>
 	Don't have an account <a ui-sref="access.signup">click here.</a>
 </div>
