--- a/src/app/components/access/access.html
+++ b/src/app/components/access/access.html
@@ -1,4 +1,7 @@
-<div>
-	Main Access
-	<div ui-view></div>
+<div class="access">
+	<img src="../../../assets/images/logo.png" alt="">
+	<div style="margin-top: 11px;">One Portal, One KYC, Ready for the World</div>
+	<div class="access-container" ui-view>
+		
+	</div>
 </div>
