added dialog based on status, and differential treatment to diff dialogs; need to access acl and other related functions

--- a/src/app/components/main/calendar/calendar.html
+++ b/src/app/components/main/calendar/calendar.html
@@ -8,7 +8,7 @@
   md-show-create-link="true"
   md-create-event-click="eventCreate($date)"
   md-create-disabled="dis"
-  auto-height="40"
+  auto-height
   class="md-primary"
 >
   <md-event-calendar-header class="md-center">
