Adding authentication service

--- a/src/app/components/access/signin/signin.html
+++ b/src/app/components/access/signin/signin.html
@@ -4,7 +4,7 @@
 	<div class="password">
 		<input type="password" placeholder="Password">		
 	</div>
-	<a class="button" ui-sref="main.dashboard">Login</a>
+	<a class="button" ng-click="vm.signIn()">Login</a>
 	<div style="margin-top: 25px; margin-bottom: 80px;">
 		Don't have an account? <a style="color: #7b868a;cursor: pointer;" ui-sref="access.signup">Click here.</a>
 	</div>
