Sizing the main container

--- a/src/app/components/main/main.html
+++ b/src/app/components/main/main.html
@@ -1,6 +1,9 @@
-<div style="width: 100%;">
-	<div>
-		<navigation />
-	</div>
-	<div ui-view></div>
+<div class="main-container">
+		<div class="navigation">
+			<navigation />			
+		</div>
+		<div class="area">
+			<div class="menu-bar">Top Bar</div>
+			<div class="display-area" ui-view></div>
+		</div>
 </div>
