--- a/src/app/components/main/navigation/navigation.html
+++ b/src/app/components/main/navigation/navigation.html
@@ -1,5 +1,4 @@
-<div>
-	Navigation
+<div class="navigation">
 	<a ui-sref="main.dashboard">Dashboard</a>
 	<a ui-sref="main.brokerage">Brokerage</a>
 	<a ui-sref="main.messages">Messages</a>
