Adding documents boilerplate

--- a/src/app/components/main/navigation/navigation.html
+++ b/src/app/components/main/navigation/navigation.html
@@ -2,7 +2,7 @@
 	<a ui-sref="main.dashboard">Dashboard</a>
 	<a ui-sref="main.brokerage">Brokerage</a>
 	<a ui-sref="main.messages">Messages</a>
-	<a ui-sref="main.documents">Documents</a>
+	<a ui-sref="main.document">Documents</a>
 	<a ui-sref="main.calendar">Calendar</a>
 	<a ui-sref="main.help">Help</a>
 </div>
