--- a/src/app/components/main/brokerage/brokerage.html
+++ b/src/app/components/main/brokerage/brokerage.html
@@ -1,3 +1,28 @@
 <div>
 	Brokerage Area
 </div>
+<div layout="row">
+  <div flex="50" class="headerProgress">
+    <div class="titleProgressHeader">Application Completion</div>
+    <ol>
+    	<li>Brokerages</li>
+    	<li>Documents</li>
+    	<li>Personal Details</li>
+    	<li>KYC</li>
+    	<li>Selection Timeslot</li>
+    </ol>
+  </div>
+  <div flex="50" class="headerProgress">
+    <div class="titleProgressHeader">Authenticity of Documents</div>
+    <ol>
+    	<li>Brokerages</li>
+    	<li>NRIC or NIF</li>
+    	<li>Passport</li>
+    	<li>Address</li>
+    	<li>Salary Slip</li>
+    	<li>Salary Slip</li>
+    	<li>Provident Fund</li>
+    	<li>Bank Statement</li>
+    </ol>
+  </div>
+</div>
