--- a/src/app/components/main/calendar/calendar.scss
+++ b/src/app/components/main/calendar/calendar.scss
@@ -1,5 +1,6 @@
 .md-event-calendar-month-cell-header {
-	text-transform: capitalize
+	text-transform: capitalize;
+	text-align: center;
 }
 md-event-calendar .md-event-calendar-cell-event.pending {
 	background-color: rgb(63, 81, 181);
