--- a/src/app/components/messages/message.html
+++ b/src/app/components/messages/message.html
@@ -1,11 +1,13 @@
-<div>
-	<div layout="row">
-		<div flex>
-			<!-- icon --> 
-		</div>
-		<div flex>
-			<h6>Standard Chartered Bank</h6>
-			<p>
+<div layout="row" class="email-summary">
+	<div class="left-ink">
+	</div>
+	<div class="recipient-icon">
+		Hi
+	</div>
+	<div layout="row" style="padding: 10px;">
+		<div>
+			<span class="email-from">Standard Chartered Bank</span>
+			<p class="email-subject">
 				Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 			</p>
 		</div>
