Styles for sidebar

--- a/src/app/components/main/navigation/navigation.html
+++ b/src/app/components/main/navigation/navigation.html
@@ -1,8 +1,24 @@
+<img style="position: absolute;" src="../../../../assets/images/sidebar-background.png">
 <div class="navigation">
-	<a ui-sref="main.dashboard">Dashboard</a>
-	<a ui-sref="main.brokerage">Brokerage</a>
-	<a ui-sref="main.messages">Messages</a>
-	<a ui-sref="main.document">Documents</a>
-	<a ui-sref="main.calendar">Calendar</a>
-	<a ui-sref="main.help">Help</a>
+	<div style="text-align: center;padding-bottom: 38px;border-bottom: 1px solid rgba(255,255,255,0.1);">
+		<img class="logo" src="../../../../assets/images/white-logo.png" alt="">		
+	</div>
+	<a ui-sref-active="active" ui-sref="main.dashboard">
+		Dashboard
+	</a>
+	<a ui-sref-active="active" ui-sref="main.brokerage">
+		Brokerage
+	</a>
+	<a ui-sref-active="active" ui-sref="main.messages">
+		Messages
+	</a>
+	<a ui-sref-active="active" ui-sref="main.document">
+		Documents
+	</a>
+	<a ui-sref-active="active" ui-sref="main.calendar">
+		Calendar
+	</a>
+	<a ui-sref-active="active" ui-sref="main.help">
+		Help
+	</a>
 </div>
