--- a/src/app/components/main/navigation/navigation.scss
+++ b/src/app/components/main/navigation/navigation.scss
@@ -1,7 +1,26 @@
 navigation {
 	position: relative;
 	display: flex;
+	overflow: hidden;
 	.navigation {
 		flex-flow: column;
+		padding-top: 30px;
+		z-index: 2;
+		width: 200px;
+		align-items: stretch;
+		.logo {
+			width: 120px;
+		}
+		a {
+			padding: 20px 0px;
+		    color: white;
+		    text-decoration: none;
+		    border-bottom: 1px solid rgba(255,255,255,0.1);
+		    padding-left: 54px;
+		    &.active {
+		    	background: white;
+		    	color: #4f6379;
+		    }
+		}
 	}
 }
