--- a/src/app/components/main/documents/document.html
+++ b/src/app/components/main/documents/document.html
@@ -1,3 +1,16 @@
-<div>
-	Document Area
+<div class="document">
+	<div layout="row" class="document-upper">
+		<div class="document-icon">
+			<i class="fa fa-file" aria-hidden="true"></i>
+
+		</div>
+		<div layout="column" class="document-details">
+			<span style="font-weight: bold"> Income Tax </span>
+			<span style="font-weight: 100;font-size: 12px;">Required</span>
+			<span>Lorem ipsum dorum</span>
+		</div>
+	</div>
+	<div class="document-action">
+		<span>Drag and drop your file here or <button>Upload</button> </span>
+	</div>
 </div>
