--- a/src/app/components/messages/messages.html
+++ b/src/app/components/messages/messages.html
@@ -1,14 +1,17 @@
 <div>
 	Messages
+	<div layout="row">
+	<md-content>
 	<md-tabs md-no-ink-bar md-dynamic-height style="margin: 50px;">
 		<md-tab ng-repeat="tab in ::vm.tabs" label="{{tab.title}}">
-		  	<div>
-				<md-content>
 					<message-test></message-test>
 					<message-test></message-test>
 					<message-test></message-test>
-				</md-content>
-			</div>
 		</md-tab>
 	</md-tabs>
+	</md-content>
+	</div>
+	<div layout="row" flex="50">
+		Hello
+	</div>
 </div>
