Adding style for navigation bars

--- a/src/app/components/main/main.html
+++ b/src/app/components/main/main.html
@@ -3,7 +3,7 @@
 			<navigation />			
 		</div>
 		<div class="area">
-			<div class="menu-bar">Top Bar</div>
+			<div class="menubar"><toolbar /></div>
 			<div class="display-area" ui-view></div>
 		</div>
 </div>
