Adding breadcrumb in toolbar

--- a/src/app/components/main/toolbar/toolbar.html
+++ b/src/app/components/main/toolbar/toolbar.html
@@ -1,7 +1,7 @@
 <div class="toolbar">
 	<div class="display-area">
 		<img src="../../../../assets/images/hide-bar.png" style="padding: 0 13px;">		
-		<div class="grow">Dashboard</div>
+		<div class="grow">{{breadCrumb}}</div>
 		<img src="../../../../assets/images/search.png" style="padding: 0 13px;">		
 		<img src="../../../../assets/images/flag.png" style="padding: 0 13px;">
 		<div style="font-size: 14px;">SG</div>		
