--- a/src/app/components/main/documents/documents.html
+++ b/src/app/components/main/documents/documents.html
@@ -1,3 +1,3 @@
-<div>
-<document-pane></document-pane>
+<div ng-repeat="document in ::vm.documents">
+<document-pane document="document"></document-pane>
 </div>
