--- a/src/app/components/main/documents/document.html
+++ b/src/app/components/main/documents/document.html
@@ -1,7 +1,7 @@
 <div class="document">
 	<div layout="row" class="document-upper">
 		<div class="document-icon">
-			<img src="../../../../assets/images/1.png"></img>
+			<img ng-src="{{document.iconUrl}}"></img>
 		</div>
 		<div layout="column" class="document-details">
 			<span style="font-weight: bold"> {{ document.title }} </span>
