Added email reply screen

--- a/src/app/components/messages/message.html
+++ b/src/app/components/messages/message.html
@@ -1,8 +1,8 @@
 <div layout="row" class="email-summary">
 	<div class="left-ink">
 	</div>
-	<div class="recipient-icon">
-		
+	<div class="email-icon">
+			<!-- <img src="../../../../assets/images/1024-px-standard-charteredsvg.png"></img> -->
 	</div>
 	<div layout="row" style="padding: 10px;">
 		<div>
