--- a/src/app/components/main/brokerage/brokerage.scss
+++ b/src/app/components/main/brokerage/brokerage.scss
@@ -15,3 +15,18 @@
 .titleProgressHeader{
 	font-weight:bold;
 }
+footer {
+  background-color: #f2f8f8;
+  position: absolute;
+  bottom: 0px;
+  height:90px;
+  width:100%;
+}
+.md-raised.md-success {
+	color: white;
+	background: #3bada5;
+}
+.md-raised.md-back {
+	color: darkgray;
+	background: ecf0f1;
+}
