--- a/src/app/components/messages/messages.html
+++ b/src/app/components/messages/messages.html
@@ -4,32 +4,27 @@
 		<md-content>
 			<md-tabs md-no-ink-bar md-dynamic-height style="margin: 40px;">
 				<md-tab ng-repeat="tab in ::vm.tabs" label="{{tab.title}}">
-							<message-test></message-test>
-							<message-test></message-test>
-							<message-test></message-test>
+							<message-summary message="message" ng-click="vm.showReplyScreen(message)">
+							</message-summary>
+							<message-summary message="message" ng-click="vm.showReplyScreen(message)">
+							</message-summary>
+							<message-summary message="message" ng-click="vm.showReplyScreen(message)">
+							</message-summary>
 				</md-tab>
 			</md-tabs>
 		</md-content>
 	</div>
-	<div layout="row" class="email-reply" flex>
+	<div layout="row" class="email-reply" ng-show="vm.currentMessage" flex>
 		<div class="email-icon">
 			<!-- <img src="../../../../assets/images/1024-px-standard-charteredsvg.png"></img> -->
 		</div>
 		<div class="email-content">
-			<span style="font-weight: bold;">Standard Chartered Bank</span>
+			<span style="font-weight: bold;">{{vm.currentMessage.from}}</span>
 			<div style="margin-top: 5px;">
-				2hr Ago
+				{{vm.currentMessage.time}}
 			</div>
 			<div class="email-body">
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+				{{vm.currentMessage.body}}
 			</div>
 		</div>
 	</div>
