--- a/src/app/components/main/brokerage/brokerage.html
+++ b/src/app/components/main/brokerage/brokerage.html
@@ -4,7 +4,7 @@
         md-vertical="$ctrl.isVertical" 
         md-linear="$ctrl.isLinear"
         md-alternative="$ctrl.isAlternative">
-        <md-step md-label="">
+        <md-step md-label="Brokerages">
             <md-step-body>
                  <h3>Premium Partners</h3>
                 POSB<br>
@@ -21,12 +21,12 @@
                 UnionBank<br>
             </md-step-body>
         </md-step>
-        <md-step md-label="">
+        <md-step md-label="Documents">
             <md-step-body>
                  <p>UPLOAD DOCUMENTS</p>
             </md-step-body>
         </md-step>
-        <md-step md-label="">
+        <md-step md-label="Personal Details">
             <md-step-body>
                 <div layout="row">
                   <div flex="50">
@@ -40,18 +40,18 @@
                 </div>
             </md-step-body>
         </md-step>
-        <md-step md-label="">
+        <md-step md-label="KYC">
             <md-step-body>
                 <p>TAX RESIDENCE</p>
             </md-step-body>
         </md-step>
-        <md-step md-label="">
+        <md-step md-label="Selection of Timeslot">
             <md-step-body>
                 <p>BOOK CALENDAR APPOINTMENTS</p>
             </md-step-body>
         </md-step>
     </md-stepper>
-    
+
   <footer>
       <div layout="row">
           <md-button class="md-raised md-back" ng-click="vm.backStep()">Back</md-button>
