--- a/src/app/components/main/brokerage/brokerage.scss
+++ b/src/app/components/main/brokerage/brokerage.scss
@@ -26,7 +26,34 @@ footer {
 	color: white;
 	background: #3bada5;
 }
-.md-raised.md-back {
-	color: darkgray;
-	background: ecf0f1;
+.md-raised{
+	.md-back {
+		color: darkgray;
+		background: ecf0f1;
+	}
+}
+.md-button.md-raised.md-success:not([disabled]):hover {
+    background-color: #3bada5;
+}
+.md-stepper-indicator.md-active .md-stepper-number, .md-stepper-indicator.md-completed .md-stepper-number {
+	background-color: #f39c11;
+	width: 40px;
+    height: 40px;
+    border-radius: 40px;
+    line-height: 40px;
+    border: none;
+}
+.md-stepper-number {
+	color: #e2eaec;
+	background-color: #ffffff;
+	border: 2px solid #e2eaec;
+}
+md-stepper {
+	width: 100%;
+}
+.md-steppers-header {
+    box-shadow: none;
+}
+.md-steppers:not(.md-steppers-linear) .md-stepper-indicator.md-editable.md-completed:hover, .md-steppers:not(.md-steppers-linear) .md-stepper-indicator.md-editable.md-completed:hover .md-stepper-indicator-wrapper, .md-steppers:not(.md-steppers-linear) .md-stepper-indicator:not(.md-active):not(.md-completed):hover, .md-steppers:not(.md-steppers-linear) .md-stepper-indicator:not(.md-active):not(.md-completed):hover .md-stepper-indicator-wrapper {
+    background-color: #fbfbfb;
 }
