--- a/src/app/components/main/brokerage/brokerage.scss
+++ b/src/app/components/main/brokerage/brokerage.scss
@@ -26,11 +26,13 @@ footer {
 	color: white;
 	background: #3bada5;
 }
-.md-raised{
-	.md-back {
-		color: darkgray;
-		background: ecf0f1;
-	}
+.md-raised.md-back {
+	color: white;
+	background: #4f6379;
+}
+.md-button.md-raised.md-back:not([disabled]):hover {
+	color: white;
+	background: #4f6379;
 }
 .md-button.md-raised.md-success:not([disabled]):hover {
     background-color: #3bada5;
@@ -56,4 +58,30 @@ md-stepper {
 }
 .md-steppers:not(.md-steppers-linear) .md-stepper-indicator.md-editable.md-completed:hover, .md-steppers:not(.md-steppers-linear) .md-stepper-indicator.md-editable.md-completed:hover .md-stepper-indicator-wrapper, .md-steppers:not(.md-steppers-linear) .md-stepper-indicator:not(.md-active):not(.md-completed):hover, .md-steppers:not(.md-steppers-linear) .md-stepper-indicator:not(.md-active):not(.md-completed):hover .md-stepper-indicator-wrapper {
     background-color: #fbfbfb;
+}
+.md-stepper-indicator.md-completed {
+    background-color: #fbfbfb;
+}
+md-event-calendar {
+	margin:30px;	
+}
+
+.inputdemoErrors .inputErrorsApp {
+  min-height: 48px; }
+
+.inputdemoErrors md-input-container > p {
+  font-size: 0.8em;
+  text-align: left;
+  width: 100%; }
+
+.col {
+	margin: 20px;
+}
+
+.footerBtns {
+	margin: 15px;
+}
+
+md-input-container.md-block {
+	margin-top: 0px;
 }
